# 3DBodyTwin

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  twinConfig.json
cmake/: Dependencies_core.cmake  Dependencies_dl.cmake  FindOpenSim.cmake
data/: .gitignore  default_constraints.json  exampleJsonMarkerfile.json
include/: c3d.h  countingSemaphore.h  gui.h  jsonMarkers.h  markers.h  movementEvent.h  osim.h  osimGeometryWrapper.h  twinDefines.h  twinParams.h  twinviewer.h
include/extensions/: camera.h
include/net/: netParams.h  network.h  optimizer.h  scheduler.h  vposer.h
include/net/constraints/: betalock.h  c3dMarker.h  constraint.h  constraintHandler.h  constraints.h  convex_circumference.h  distance.h  jointangle.h  jsonMarker.h  marker.h  osimMarker.h  volume.h
include/net/supr/: supr.h  suprparams.h
include/util/: aabb.h  bvh.h  frustum.h  interaction.h  intersection.h  loadUV.h  plane.h  ray.h  selection.h  sphere.h  torchutil.h  triangle.h
scripts/: conda_activate.sh  conda_install.sh  conda_setup.sh  setup.sh
shader/: MVP_norm_col.vert  MVP_norm_col_pivot.vert  blinnPhong.frag  blinnPhong.vert  intensityDiffuse.frag  pointCloud.frag  pointCloud.vert  pointCloudUni.vert  transparent_quad.frag  transparent_quad.vert
src/: CMakeLists.txt  c3d.cpp  gui.cpp  jsonMarkers.cpp  main.cpp  osim.cpp  osimGeometryWrapper.cpp  twinviewer.cpp
src/extensions/: camera.cpp
src/net/: netParams.cpp  network.cpp  optimizer.cpp  scheduler.cpp  vposer.cpp
src/net/constraints/: betalock.cpp  c3dMarker.cpp  constraint.cpp  constraintHandler.cpp  constraints.cpp  convex_circumference.cpp  distance.cpp  jointangle.cpp  jsonMarker.cpp  marker.cpp  osimMarker.cpp  volume.cpp
src/net/supr/: supr.cpp  suprparams.cpp
src/util/: aabb.cpp  bvh.cpp  frustum.cpp  interaction.cpp  intersection.cpp  loadUV.cpp  plane.cpp  ray.cpp  selection.cpp  sphere.cpp  torchutil.cpp  triangle.cpp
